Room buttons working

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
   </section>
   <section class="right-section">
     <h3 id="roomMessage"></h3>
-    <div id="messageArea">
+    <div id="messageArea" class="messageArea">
 
     </div>
     <div id="chatInputDiv">
