Side bar styling, nav bar styling and about section done

--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -5,6 +5,14 @@
     <title>Title</title>
 </head>
 <body>
+<h2 >Our Team</h2>
+<p>This website was brought to you by:</p>
+<ul>
+    <li>Simon Gotera Vargas</li>
+    <li>Amandeep Singh Amandeep Singh</li>
+    <li>Josiah Jehoiakim Yap</li>
+    <li>Tyler Valentini</li>
+</ul>
 
 </body>
 </html>
