Divided username and timestamp from msg to improve readability

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,7 +37,7 @@
     <div id="groups">
 
       <div>
-        <h2> Chat Availables</h2>
+        <h2> Chats Available</h2>
         <ul id="addRooms" class="rooms">
 
         </ul>
