--- a/src/main/webapp/about.html
+++ b/src/main/webapp/about.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        /* Hide the entire page by default */
+        .hidden {
+            display: none;
+        }
+    </style>
 </head>
 <body>
+<div id="about">
 <h2 >Our Team</h2>
 <p>This website was brought to you by:</p>
 <ul>
@@ -13,6 +20,7 @@
     <li>Josiah Jehoiakim Yap</li>
     <li>Tyler Valentini</li>
 </ul>
+</div>
 
 </body>
 </html>
