dar-mode color fixed, improve background and add animation to buttons

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -94,7 +94,9 @@
   const themeToggleBtn = document.getElementById('themeToggle');
   themeToggleBtn.addEventListener('click', function() {
     document.body.classList.toggle('dark-mode');
+
   });
+  themeToggleBtn.setAttribute("class","btn");
 </script>
 
 </body>
