changed some theme

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -64,7 +64,7 @@
     </div>
     <div id="chatInputDiv">
       <label>
-        <input id="chatInput" type="text" placeholder="Enter room Number">
+        <input id="chatInput" type="text" placeholder="Enter Your message over here">
       </label>
       <button id="send" onclick="sendMessage()">send</button>
     </div>
@@ -73,7 +73,7 @@
   </section>
 </div>
 <footer class="footer">
-  <p>jhdcfash</p>
+  <p>CSCI 2020U: Software Development and Integration, Ontario tech University</p>
 </footer>
 
 
