--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -44,6 +44,7 @@
       </div>
       <div id="roomNumberDiv">
         <button id="createRoom" onclick="newRoom()">Create and Join Room</button>
+        <button id="refresh" onclick="getRooms()">Get updated List</button>
       </div>
 
 
