updated some html

--- a/src/main/webapp/Multiplayer.html
+++ b/src/main/webapp/Multiplayer.html
@@ -38,6 +38,9 @@
         </div>
 
     </section>
+    <section id="gameBoardMP">
+
+    </section>
     <section class="right-section" id="right-section">
         <h3 id="roomMessage"></h3>
         <div id="messageArea" class="messageArea">
