--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -24,7 +24,7 @@
 
 <body>
 <nav>
-  <div class="nav-text" >Chat Server</div>
+  <div class="nav-text" >Snake And Ladder</div>
   <ul>
     <li><a href="#" onclick="loadMultiplayer()">Games</a></li>
     <li><a href="#" onclick="loadAbout()">About</a></li>
