--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -45,6 +45,10 @@
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
 <script src="js/load.js"></script>
+<script src="js/gameLogic.js"></script>
+<script src="js/compVsHumanHandler.js"></script>
+
+
 
 <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
 <script>
