--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -43,7 +43,7 @@
 
 <script src="js/vendor/modernizr-3.11.2.min.js"></script>
 <script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<script src="js/multiplePlayerRunner.js"></script>
 <script src="js/load.js"></script>
 <script src="js/gameLogic.js"></script>
 <script src="js/compVsHumanHandler.js"></script>
