-Prototype of SinglePlayer that shows Picture -No Single Player Game Logic Implemented Yet

--- a/src/main/webapp/compVsPlayerSetup.html
+++ b/src/main/webapp/compVsPlayerSetup.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>CompVsHuman</title>
+    <script src = "js/gameLogic.js"></script>
+    <script src="js/compVsHumanHandler.js"></script>
+
 </head>
 <body>
 <canvas id="canvaSingle" width="500" height="500"></canvas>
 <section>
-    <button id="rollTheDice">Roll</button>
+    <button id="rollTheDice" onclick="singleRoll()">Roll</button>
     <button id="showNumber">*</button>
 </section>
-<script src="js/compVsHumanHandler.js"></script>
+
 </body>
 </html>
