--- a/src/main/webapp/compVsPlayerSetup.html
+++ b/src/main/webapp/compVsPlayerSetup.html
@@ -10,7 +10,8 @@
 <body>
 <canvas id="canvaSingle" width="500" height="500"></canvas>
 <section>
-    <button id="rollTheDice" onclick="singleRoll()">Roll</button>
+    <button id="startGame" onclick="startGame()">Start Game</button>
+    <button id="singleDice" onclick="singleRoll()">Roll</button>
     <button id="showNumber">*</button>
 </section>
 
