Improvements in UI

--- a/src/main/webapp/Multiplayer.html
+++ b/src/main/webapp/Multiplayer.html
@@ -55,9 +55,9 @@
         </div>
         <div id="chatInputDiv">
             <label>
-                <input id="chatInput" type="text" placeholder="Enter Your message over here">
+                <input id="chatInput" type="text" placeholder="Enter message">
             </label>
-            <button id="send" onclick="sendMessage()">send</button>
+            <button id="send" onclick="sendMessage()" class="create-">send</button>
         </div>
 
 
