--- a/src/main/webapp/compVsPlayerSetup.html
+++ b/src/main/webapp/compVsPlayerSetup.html
@@ -8,10 +8,12 @@
 
 </head>
 <body>
-<canvas id="canvaSingle" width="500" height="500"></canvas>
-<section>
-    <button id="singleDice" onclick="singleRoll()">Roll</button>
-</section>
+<div class="comVsHumaPage">
+    <canvas id="canvaSingle" width="500" height="500"></canvas>
+
+        <button id="singleDice" onclick="singleRoll()" class="singleDice">Roll</button>
+
+</div>
 
 </body>
 </html>
