Added legend for Player vs Computer

--- a/src/main/webapp/compVsPlayerSetup.html
+++ b/src/main/webapp/compVsPlayerSetup.html
@@ -8,6 +8,17 @@
 
 </head>
 <body>
+<div class="game-legend">
+    <div class="legend-item">
+        <span class="dot player-dot"></span>
+        <label>Player (You)</label>
+    </div>
+    <div class="legend-item">
+        <span class="dot computer-dot"></span>
+        <label>Computer</label>
+    </div>
+</div>
+
 <div class="comVsHumaPage">
     <canvas id="canvaSingle" width="500" height="500"></canvas>
 
