added README.md for the project and demonstration video

--- a/src/main/webapp/compVsPlayerSetup.html
+++ b/src/main/webapp/compVsPlayerSetup.html
@@ -21,7 +21,7 @@
 
 <div class="comVsHumaPage">
     <canvas id="canvaSingle" width="500" height="500"></canvas>
-
+    <canvas id="diceCanvasSingle" width="200" height="200"></canvas>
         <button id="singleDice" onclick="singleRoll()" class="singleDice">Roll</button>
 
 </div>
